--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ a {
   color: inherit;
 }
 
+button {
+  padding: 0;
+  border: none;  
+}
+
 ul {
   list-style: none;
 }
@@ -45,6 +50,20 @@ body {
 
 .logo {
   margin-bottom: 35px;
+}
+
+.menu__btn {
+  display: none;
+  width: 40px;
+  height: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu__btn span {
+  background-color: #000;
+  height: 2px;
+  width: 100%;
 }
 
 .menu__list {
@@ -80,6 +99,9 @@ body {
   min-height: 500px;
   color: #fff;
   font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .top__title {
@@ -95,4 +117,57 @@ body {
   margin-bottom: 48px;
   max-width: 560px;
   line-height: normal;
+}
+
+.blockquote__text {
+  text-align: center;
+  font-family: 'Cormorant', serif;
+  font-size: 40px;
+  font-style: italic;
+  line-height: normal;
+  max-width: 704px;
+  margin: 150px auto;
+}
+
+@media (max-width: 1000px) {
+  .user-actions__item-search {
+    margin-left: 30px;
+  }
+  .menu {
+    margin-right: auto;
+  }
+  .menu__list {
+    margin-left: 60px;
+  }
+  .logo {
+    margin-bottom: 0;
+  }
+  .header__inner {
+    min-width: auto;
+  }
+  .blockquote__text {
+    margin-top: 120px;
+    margin-bottom: 135px;
+  }
+}
+
+@media (max-width: 860px) {
+  .menu__list {
+    display: none;
+  }
+  .menu__btn {
+    display: flex;
+  }
+}
+
+@media (max-width: 768px) {
+  
+}
+
+@media (max-width: 480px) {
+  
+}
+
+@media (max-width: 360px) {
+  
 }
