--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ a {
 button {
   padding: 0;
   border: none;  
+  background-color: transparent;
+  cursor: pointer;
 }
 
 ul {
@@ -29,12 +31,25 @@ ul {
   padding-right: 20px;
 }
 
+/* .reviews__item.reviews__item--hide {
+  display: none;
+} */
+
+.title {
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 40px;
+  font-family: 'Cormorant', serif;
+  font-weight: 400;
+}
+
 body {
   color: #151618;
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   font-weight: 300;
-  line-height: 1.5;
+  line-height: normal;
+  position: relative;
   /* font-family: 'Cormorant' ,serif; */
 }
 
@@ -58,6 +73,29 @@ body {
   height: 20px;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 2;
+  position: relative;
+}
+
+.overlay {
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgb(0, 0, 0, .5);
+  z-index: 1;
+  transition: background-color .3s ease;
+}
+
+.overlay.menu__open {
+  display: block;
+}
+
+.mobile-nav, 
+.menu__close {
+  display: none;
 }
 
 .menu__btn span {
@@ -73,6 +111,8 @@ body {
   font-weight: 400;
   font-size: 18px;
   margin-left: 85px;
+  position: relative;
+  z-index: 3;
 }
 
 .user-actions {
@@ -90,7 +130,7 @@ body {
 .top {
   background-image: url(../images/top-bg.jpg);
   background-repeat: no-repeat;
-  background-position: bottom center;
+  background-position: bottom left;
   background-size: cover;
 }
 
@@ -123,13 +163,260 @@ body {
   text-align: center;
   font-family: 'Cormorant', serif;
   font-size: 40px;
-  font-style: italic;
   line-height: normal;
   max-width: 704px;
   margin: 150px auto;
 }
 
+/* === ASSORTMENT === */
+
+.assortment {
+  margin-bottom: 150px;
+}
+
+.assortment__list {
+  text-align: center;
+  display: flex;
+  gap: 0 40px;
+}
+
+.assortment__img {
+  max-width: 208px;
+  max-height: 208px;
+  width: 100%;
+}
+
+.assortment__name {
+  font-family: 'Cormorant', serif;
+  padding-top: 10px;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+/* === REVIEWS === */
+
+.reviews {
+  padding: 60px 0;
+  background-color: #F7F2EA;
+}
+
+.reviews__list {
+  display: flex;
+  gap: 0 26px;
+  justify-content: center;
+}
+
+.reviews__item {
+  flex-basis: 280px;
+}
+
+.reviews__text {
+  font-size: 16px;
+  font-style: italic;
+  margin-bottom: 10px;
+  font-style: italic;
+}
+
+.reviews__name {
+  font-weight: 600;
+}
+
+/* === BLOG === */
+
+.blog {
+  padding: 150px 0;
+}
+
+.blog__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px 58px;
+}
+
+.blog__item {
+  flex-basis: 542px;
+  display: flex;
+  gap: 0 20px;
+}
+
+.blog__content {
+  display: flex;
+  flex-direction: column;
+}
+
+.blog__item-title {
+  font-family: 'Cormorant', serif;
+  font-size: 24px;
+  font-weight: 400;
+  margin-bottom: 10px;
+  min-height: 86px;
+}
+
+.blog__item-autor {
+  font-size: 13px;
+}
+
+.blog__item-link {
+  font-size: 13px;
+  margin-top: auto;
+  position: relative;
+}
+
+.blog__item-link::after {
+  content: '';
+  position: absolute;
+  background-image: url(../images/arrow.svg);
+  width: 5px;
+  height: 10px;
+  margin-left: 8px;
+  bottom: 3px;
+}
+
+.blog__link {
+  padding: 12px 41px;
+  display: flex;
+  justify-content: center;
+  margin: 72px auto 0;
+  border: 1px solid #151618;
+  width: 152px;
+}
+
+/* === MAILING === */
+
+.mailing-list {
+  padding: 100px 0;
+  background-color: #F7F2EA;
+  background-image: url(../images/mailing-bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+
+.mailing__title {
+  text-align: left;
+}
+
+.mailing-list__inner {
+  display: flex;
+  gap: 60px 40px;
+}
+
+.mailing-list__text {
+  line-height: 1.5;
+  flex-basis: 580px
+}
+
+.mailing-list__form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 580px;
+}
+
+.mailing-list__email {
+  border: none;
+  border-bottom: 1px solid #B8B58B;
+  background-color: transparent;
+  padding: 3px 15px;
+  width: 438px;
+  margin-right: 25px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.5;
+  color: #151618;
+}
+
+.mailing-list__email::placeholder {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.5;
+  color: #B8B58B;
+}
+
+.mailing-list__btn {
+  background-color: #fff;
+  border: 1px solid #151618;
+  padding: 12px 41px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.mailing-list__label {
+  margin-top: 16px;
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+  padding-left: 20px;
+}
+
+.checkbox__text {
+  font-size: 13px;
+  padding-left: 20px;
+}
+
+.checkbox-style {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border: 1px solid #151618;
+  margin-top: 5px;
+  background-color: #fff;
+}
+
+.checkbox:checked + .checkbox-style::before {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background-color: #151618;
+  top: 1px;
+  left: 1px;
+}
+
+/* === PRIORITISE === */
+
+.prioritise {
+  padding: 150px 0;
+}
+
+.prioritise__list {
+  display: flex;
+  text-align: center;
+  gap: 30px 49px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.prioritise__title {
+  font-weight: 300;
+  margin-bottom: 10px;
+  font-size: 30px;
+}
+
+.prioritise__text {
+  margin-bottom: 30px;
+  font-weight: 600;
+}
+
+
+
+
+/* === MEDIA === */
+
+/* 1000 */
+
 @media (max-width: 1000px) {
+  .title {
+    margin-bottom: 30px;
+  }
   .user-actions__item-search {
     margin-left: 30px;
   }
@@ -145,29 +432,331 @@ body {
   .header__inner {
     min-width: auto;
   }
+  .assortment {
+    margin-bottom: 120px;
+  }
   .blockquote__text {
     margin-top: 120px;
     margin-bottom: 135px;
   }
+  .assortment__list {
+    gap: 0;
+  }
+  .reviews__item:last-child {
+    display: none;
+  }
+  .blog {
+    padding: 120px 0;
+  }
+  .blog__list {
+    gap: 67px 20px;
+  }
+  .blog__item {
+    flex-basis: 460px;
+  }
+  .blog__item-img {
+    max-width: 230px;
+  }
+  .blog__item-link {
+    margin-top: 60px;
+  }
+  .mailing-list {
+    padding: 60px 0;    
+  }
+  .mailing__title {
+    text-align: center;
+  }
+  .mailing-list__inner {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .mailing-list__text {
+    text-align: center;
+    flex-basis: 780px;
+  }
+  .prioritise {
+    padding: 120px 0;
+  }
+  .prioritise__list {
+    gap: 30px 210px;
+  }
+  .blog__list {
+    gap: 30px 20px;
+  }
+  .blog__item {
+    flex-basis: 542px;
+  }
+  .blog__item:nth-child(even) {
+    margin-left: 98px;
+  }
+  .blog__item-img {
+    max-width: 270px;
+  }
+  .mailing-list__text {
+    flex-basis: 640px;
+  }
 }
 
+
+/* 860 */
+
 @media (max-width: 860px) {
+  .menu {
+    order: -1;
+    margin-right: 0;
+  }
   .menu__list {
-    display: none;
+    transform: translateY(-100%);
+    display: block;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 480px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding-top: 60px;
+    transition: transform .5s ease;
+  }
+  .menu__list.menu__list-open {
+    transform: translateY(0%);
+  }
+  .menu__close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
   }
   .menu__btn {
     display: flex;
   }
+  .mobile-nav, 
+  .menu__close {
+    display: block;
+   }
+  .menu__item {
+    margin-bottom: 30px;
+    font-size: 24px;
+    font-family: 'Cormotant', serif;
+  }
+  .mobile-menu {
+    padding-top: 60px;
+    margin: 60px 30px;
+    border-top: 2px solid #F7F2EA;
+  }
+  .mobile-menu__item {
+    margin-bottom: 35px;
+  }
+  .mobile-actions {
+    background-color: #F7F2EA;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 80px;
+  }
+  .logo {
+    margin-left: auto;
+    margin-right: 154px;
+  }  
 }
+
+
+/* 768 */
 
 @media (max-width: 768px) {
-  
+  .header__inner {
+    padding-left: 64px;
+    padding-right: 64px;
+  }
+  .blockquote__text {
+    max-width: 640px;
+  }
+  .assortment__list {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .reviews__item:last-child {
+    display: block;
+  }
+  .reviews__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px 76px;
+  }
+  .prioritise__list {
+    gap: 30px 133px;
+  }
 }
+
+
+/* 680 */
+
+@media (max-width: 680px) {
+  .container {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .header__inner {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .top__title {
+    font-size: 40px;
+    line-height: normal;
+  }
+  .blockquote__text {
+    font-size: 16px;
+    max-width: 376px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+  .blog__item:nth-child(even) {
+    margin-left: 0;
+  }
+}
+
+
+/* 480 */
 
 @media (max-width: 480px) {
-  
+  .logo {
+    margin-right: 80px;
+  }
+  .logo img {
+    width: 40px;
+  }
+  .menu__list {
+    width: 360px;
+  }
+  .assortment {
+    margin-bottom: 80px;
+  }
+  .reviews {
+    padding: 50px 0;
+  }
+  .reviews__list {
+    gap: 30px 20px;
+  }
+  .reviews__item {
+    flex-basis: 220px;
+  }
+  .blog {
+    padding: 60px 0;    
+  }
+  .blog__item-img {
+    max-width: 230px;
+  }
+  .mailing-list {
+    padding: 50px 0;
+  }
+  .mailing-list__text {
+    flex-basis: 100%;
+    font-size: 13px;
+  }
+  .mailing-list__inner {
+    gap: 30px 0;
+  }
+  .mailing-list__email {
+    width: 324px;
+    margin-right: 20px;
+  }
+  .mailing-list__btn {
+    padding: 10px 39px;
+  }
+  .prioritise {
+    padding: 60px 0;
+  }
 }
 
+
+/* 360 */
+
 @media (max-width: 360px) {
-  
+  .title {
+    margin-bottom: 30px;
+    font-size: 24px;
+  }
+  .logo {
+    margin-right: 50px;
+  }
+  .user-actions__item-search {
+    margin-left: 0;
+  }
+  .header__inner {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    min-height: auto;
+  }
+  .top__title {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  .top__text {
+    font-size: 13px;
+    margin-bottom: 30px;
+  }
+  .top__inner {
+    min-height: 367px;
+  }
+  .blockquote__text {
+    max-width: 340px;
+    margin-top: 70px;
+    margin-bottom: 80px;
+  }
+  .assortment__img {
+    max-width: 170px;;
+  }
+  .assortment {
+    margin-bottom: 80px;
+  }
+  .reviews__item {
+    flex-basis: 100%;
+  }
+  .reviews__item:last-child,
+  .reviews__item:first-child {
+    display: none;
+  }
+  .blog {
+    padding: 50px 0;
+  }
+  .blog__list {
+    justify-content: center;
+  }
+  .blog__item {
+    display: block;
+    max-width: 270px;
+  }
+  .blog__item:nth-child(n + 3) {
+    display: none;
+  }
+  .blog__item-img {
+    max-width: 100%;
+  }
+  .blog__item-title {
+    min-height: auto;
+  }
+  .blog__item-link {
+    margin-top: 10px;
+  }
+  .blog__link {
+    margin-top: 30px;
+  }
+  .mailing-list__email {
+    width: 205px;
+  }
+  .prioritise {
+    padding: 50px 0;
+  }
+  .prioritise__main-title {
+    font-size: 24px;
+  }
+  .prioritise__list {
+    gap: 40px 100px;
+  }
+  .prioritise__title {
+    font-size: 20px;
+  }
+  .prioritise__text {
+    font-size: 10px;
+    font-weight: 400;
+  }
 }
